k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: collector
  labels:
    app: collector-shop
